--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -4,13 +4,16 @@
 }
 body{
     width:100%;
-    height:100%;
-    
+    height:100vh;
     font-family: 'Open Sans', sans-serif;
     background-size:cover;
-    background-repeat:no-repeat;
-    background-image: url(/asset/images/background/bg-5.jpg);
-    animation: changeBackground 10s infinite;
+    background-image: url(/asset/images/background/bg-6.jpg);
+    /* background-color: #0df0e571; */
+    /* background-repeat: no-repeat; */
+    /* animation: changeBackground 10s infinite; */
+}
+ul{
+    list-style: none;
 }
 .main-header{
     display:flex;
@@ -20,6 +23,13 @@ body{
     /* background-color:#4BA5C7; */
 
 }
+p{
+    color:white;
+}
+.bg{
+    background-image: url(/asset/images/background/bg-6.jpg);
+    background-size: cover;
+}
 
 .main-header-list-left img{
     padding-left:50px;
@@ -28,28 +38,27 @@ body{
 }
 
 .main-header-social-media{
-    padding:20px 0px;
-    float:left;
-    padding-left:69%;
+    padding:22px 0px;
+    padding-left:74%;
     display:inline;
 }
 .main-header-social-media a{
-    padding-left:10px;
+    padding-left:15px;
 }
 
-.fab-icon{
-    color:#7a7a7a;
-    margin-right: 10px; 
-    font-size: 24px;
-
+.fab{
+    color: #9b9b9b !important;
+    font-size: 22px !important;
 }
-.fab-icon:hover{
-    color:#22B6AF;
+
+
+.fab:hover{
+    color:#28A745 !important;
     transition: 0.3s ease;
 }
 .menu{
-    background-color:#3e362a52;
-    padding:15px;
+    background-color: #a0988b47;
+        padding: 8px;
 }
 
 .menu ul{
@@ -72,7 +81,7 @@ body{
 }
 
 .menu a:hover{
-    color:#0df0e4;
+    color:#28A745;
     transition: 0.3s ease;
 }
 .menu a img{
@@ -137,13 +146,12 @@ body{
 }
 
 .wel-sec h1 span{
-   color: black; 
+   color: rgb(255, 255, 255); 
 }
 
 .wel-sec span a{
     color:aliceblue;
-    background-color:#7070e758;
-    width:100%;
+    background-color:#7070e79e;
     padding:10px 20px;
     border-radius: 20px;
     text-decoration: none;
@@ -151,7 +159,7 @@ body{
 }
 
 .wel-sec a:hover{
-    color:rgb(12, 12, 12);
+    color:rgb(12, 12, 12) !important;
     background-color: rgb(255, 255, 255) !important;
     transform:scale(1.1);
     transition: 0.2s ease;
@@ -163,49 +171,132 @@ body{
     font-size: 60px;
 }
 
-.about-sec-bg{
-    width:100%;
+
+.about-sec{
+   width: 100%;
+   height: 600px;
+    background-image: url(/asset/images/background/bg2.jpg);
+    background-size: cover;
 }
 
-.about-sec-container{
-    padding:0px 100px;
+.about-sec-head{
+    padding:50px 0px 50px 50px;
+    color: white;
 }
 
-.about-sec-container-left{
-    float:left;
-}
-.about-sec-container-right{
-   padding-left:100px;
-}
-
-
-
-
-.about-sec-container-left img{
-    height:500px;
-    width:500px;
-}
-
-.sec-3 h1{
-    letter-spacing:10px;
+.paragraph p{
     color:white;
+    line-height: 1.8;
+    font-size: 18px !important;
+
 }
 
-.sec-3 img{
-    width: 30%
+ .paragraph{
+    text-indent: 70px;
 }
 
-.sec-3{
-    padding:50px;
+.see-work p{
+    padding-top: 50px;
+    text-align: center !important;
+    align-items: center;
+    color:white;
+    margin-bottom: 0px !important;
+}
+.Scroll{
+    text-align: center;
+    align-items: center;
+    color: whitesmoke;
+}
+
+.btn-success{
+    border-top: none !important;
+    padding: 10px 20px;
+}
+
+.Project-sec{
+    padding-bottom: 38px;
+}
+
+.project-sec-head{
+    padding:50px 0px 0px 50px;
+    color: white;
+}
+.Project-sec img {
+    width: 100%;
     
 }
 
-.sec-3 p{
-    margin-top:-500px;
-    display: inline;
-    /* float:left; */
+.myproj{
+    padding-bottom:50px;
+}
+
+.myproj h1{
+    color:white;
+    padding:40px 0px 5px 0px !important;
+}
+.myproj a{
+    float: right;
+}
+
+
+/**Resume**/
+.resume{
     text-align: center;
-    justify-content: center;
-    flex-grow: 1;
+    padding-bottom:50px;
+    color:white;
+}
+.resume h3{
+    padding-bottom: 10px !important;
+}
+
+.btn-primary{
+    padding: 10px 20px;
+}
+
+
+                            /** Footer **/
+
+.Footer-sec{
+    background-image: url(/asset/images/background/bg-8.jpg);
+    padding-bottom: 2px;
+    background-size: cover;
+    color:white;
+}
+
+.Footer-sec a{
+    color:white;
+}
+.Footer-sec li{
+    padding-bottom:5px;
+    text-align:left;
+}
+
+.foot-logo-desc{
+    padding-left: 50px !important;
+}
+
+
+.Foot-implinks li{
+    padding-left:50px;
+}
+
+.Footer-social-media {
+    padding-top: 15px;
+}
+
+.Footer-social-media a{
+    padding-right:10px;
+}
+
+
+.row{ 
+ padding:40px 0px 40px 40px  !important;
 
 }
+.copy-right{
+    /* padding-top:100px; */
+    text-align: center;
+}
+
+
+                                    /** Footer-sec End**/
